# vimcats

./: .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  flake.nix  luaCATS.md  result
.cargo/: config.toml
.github/workflows/: build.yaml  flakehub.yml  nix-build.yml  publish.yml  release-please.yml
src/: cli.rs  lexer.rs  lib.rs  vimdoc.rs
src/lexer/: token.rs
src/parser/: node.rs
src/parser/tags/: enum.rs  mod.rs
tests/: basic.rs  golden.rs  types.rs  with_settings.rs
tests/golden/: alias_and_type.lua  alias_and_type.txt  brief.lua  brief.txt  classes.lua  classes.txt  divider_and_tag.lua  divider_and_tag.txt  enum.lua  enum.txt  export.lua  export.txt  functions.lua  functions.txt  module.lua  module.txt  multi_extension.lua  multi_extension.txt  multiline_param.lua  multiline_param.txt  namespaced_classes.lua  namespaced_classes.txt  private.lua  private.txt  toc.lua  toc.txt  usage.lua  usage.txt
