[package]
name = "vimcats"
version = "0.12.0"
description = "LuaCATS parser and vimdoc transformer"
authors = ["mrcjkb <marc@jakobi.dev>"]
edition = "2021"
rust-version = "1.65.0"
homepage = "https://github.com/mrcjkb/vimcats"
repository = "https://github.com/mrcjkb/vimcats"
license = "MIT"
readme = "README.md"
keywords = ["parser", "lua", "LuaCATS", "vimdoc", "vim", "neovim", "documentation", "help"]
categories = ["parsing", "command-line-utilities"]
exclude = [
    ".aur/**",
    ".cargo/**",
    ".github/**",
    "tests/**",
    ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vimcats"
required-features = ["cli"]

[dependencies]
chumsky = { version = "0.8.0", default-features = false }
textwrap = { version = "0.16.0", default-features = false, optional = true }
comfy-table = { version = "6.1.2", default-features = false, optional = true }
lexopt = { version = "0.2.1", default-features = false, optional = true }

[features]
vimdoc = ["dep:textwrap", "dep:comfy-table"]
cli = ["vimdoc", "dep:lexopt"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
panic = 'abort'
