[package]
name = "vimcats"
version = "1.0.1"
description = "LuaCATS parser and vimdoc transformer"
authors = ["mrcjkb <marc@jakobi.dev>"]
edition = "2021"
homepage = "https://github.com/mrcjkb/vimcats"
repository = "https://github.com/mrcjkb/vimcats"
license = "GPL-2.0+"
readme = "README.md"
keywords = ["parser", "lua", "LuaCATS", "vimdoc", "neovim"]
categories = ["parsing", "command-line-utilities"]
exclude = [
    ".aur/**",
    ".cargo/**",
    ".github/**",
    "tests/**",
    ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vimcats"
required-features = ["cli"]

[dependencies]
chumsky = { version = "0.9.3", default-features = false }
textwrap = { version = "0.16.0", default-features = false, optional = true }
comfy-table = { version = "7.1.1", default-features = false, optional = true }
lexopt = { version = "0.3.0", default-features = false, optional = true }
itertools = "0.13.0"

[dev-dependencies]
goldenfile = "1.7.1"

[features]
vimdoc = ["dep:textwrap", "dep:comfy-table"]
cli = ["vimdoc", "dep:lexopt"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
panic = 'abort'
